@@ -66,6 +66,7 @@ gnulib_modules="
   readdir
   read-file
   vsnprintf-posix
+  pipe2
   "
 
 # gnulib modules used in libpoke/.
