@@ -634,15 +634,10 @@ usock_new (const char *path)
 
   u->pipefd[0] = -1;
   u->pipefd[1] = -1;
-  if (pipe (u->pipefd) == -1)
+  if (pipe2 (u->pipefd, O_CLOEXEC) == -1)
     goto error;
-  if ((flags = fcntl (u->pipefd[0], F_GETFD)) == -1
-      || fcntl (u->pipefd[0], F_SETFD, flags | FD_CLOEXEC) == -1)
-    goto error;
-  if ((flags = fcntl (u->pipefd[1], F_GETFD)) == -1
-      || fcntl (u->pipefd[1], F_SETFD, flags | FD_CLOEXEC) == -1)
-    goto error;
-  if (fcntl (u->pipefd[0], F_SETFL, O_NONBLOCK) == -1)
+  if ((flags = fcntl (u->pipefd[0], F_GETFL)) == -1
+      || fcntl (u->pipefd[0], F_SETFL, flags | O_NONBLOCK) == -1)
     goto error;
 
   if ((u->fd = socket (AF_UNIX, SOCK_STREAM, 0)) == -1)
@@ -651,7 +646,8 @@ usock_new (const char *path)
   if ((flags = fcntl (u->fd, F_GETFD)) == -1
       || fcntl (u->fd, F_SETFD, flags | FD_CLOEXEC) == -1)
     goto error;
-  if (fcntl (u->fd, F_SETFL, O_NONBLOCK) == -1)
+  if ((flags = fcntl (u->fd, F_GETFL)) == -1
+      || fcntl (u->fd, F_SETFL, flags | O_NONBLOCK) == -1)
     goto error;
 
   memset (&adr, 0, sizeof (adr));
